--- a/exam.css
+++ b/exam.css
@@ -26,7 +26,7 @@ border-radius: 5px;
 }
 .container{
        height: 700px;
-       background-color: rgb(241, 228, 225);
+       background-color: rgb(250, 250, 250);
     border: 2px solid green;
 }
 
@@ -76,7 +76,7 @@ h1{
     color: white;
 }
 #markedQuestion{
-    color: white;
+    /* color: white; */
     font-size: 30px;
     padding: 10px;
 }
@@ -84,5 +84,12 @@ h1{
     cursor: pointer;
     background-color:rgb(18, 56, 30);
     color:white;
+}
+.markDiv1{
+    color:black;
+    background-color: white;
+    margin: 15px;
+    text-align: center;
+    border-radius: 5px;
 }
 
